# MatrixGPU

./: .gitignore  .zshrc  CMakeLists.txt  ComplexEigenSolverGPU.cuh  ComplexEigenSolverGPU_test.cu  Dockerfile  Dockerfile copy  MatrigGPU.cuh  MatrixGPU  MatrixGPU.cuh  MatrixGPU_test.cu  SelfAdjointEigenSolverGPU.cuh  SelfAdjointEigenSolverGPU_test.cu  SelfAdjointEigenSolver_mgpu.cuh  SelfAdjointEigenSolver_mgpu_test  SelfAdjointEigenSolver_mgpu_test.cu  SparseCompressed copy.cuh  SparseCompressed.cuh  docker-compose.yml  get_sm.sh  macros.hpp  magma_overloads.cuh
CPU/: CMakeLists.txt  MultiPrecisionComplexEigenSolver.cpp
SelfAdjointEigenSolver_mgpu/: SelfAdjointEigenSolver_mgpu_1.cuh  SelfAdjointEigenSolver_mgpu_test_1.cu
benchmark/: CMakeLists.txt  ComplexEigenSolver.cpp  ComplexEigenSolverGPU.cu  SelfAdjointEigenSolver.cpp  SelfAdjointEigenSolverGPU.cu  SelfAdjointEigenSolver_mgpu.cu  ugpu03.SelfAdjointEige
deps_test/: CMakeLists.txt
tests/: error.hpp  generateRandomMatrix.hpp  intel_mkl_zheevd.cpp  intel_mkl_zheevd_test  magma_zheevd_m.cu  magma_zheevd_m_2.cu  magma_zheevd_m_3.cu  magma_zheevd_m_3_test  magma_zheevd_m_checkWorkSize  magma_zheevd_m_checkWorkSize.cu  magma_zheevd_m_test  magma_zheevd_m_test_2
